<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/camera_background">

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/camera_preview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/camera_action_bar_semi_transparent_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/camera_margin_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/camera_action_view_margin_padding"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/camera_repeat"
            android:drawableTop="@drawable/ic_autorenew_white"
            android:drawablePadding="@dimen/camera_action_view_drawable_padding"
            android:padding="@dimen/camera_action_view_padding"
            android:text="@string/camera_repeat"
            android:textAllCaps="true"
            android:textColor="@color/camera_default_text_color"
            android:textSize="@dimen/camera_action_view_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/camera_action_view_margin_padding"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/camera_repeat"
            android:drawableTop="@drawable/ic_border_color_white"
            android:drawablePadding="@dimen/camera_action_view_drawable_padding"
            android:padding="@dimen/camera_action_view_padding"
            android:text="@string/camera_description"
            android:textAllCaps="true"
            android:textColor="@color/camera_default_text_color"
            android:textSize="@dimen/camera_action_view_text_size"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txtConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/camera_repeat"
            android:drawableTop="@drawable/ic_done_white"
            android:drawablePadding="@dimen/camera_action_view_drawable_padding"
            android:padding="@dimen/camera_action_view_padding"
            android:text="@string/camera_confirm"
            android:textAllCaps="true"
            android:textColor="@color/camera_default_text_color"
            android:textSize="@dimen/camera_action_view_text_size"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
